[gd_scene load_steps=40 format=3 uid="uid://b1kgo5jsbegj3"]

[ext_resource type="PackedScene" uid="uid://hvucvjcnynp2" path="res://scenes/game_world/game_level.tscn" id="1_ae60x"]
[ext_resource type="Script" uid="uid://cnh0bb26c321e" path="res://scripts/main/main.gd" id="1_p8abn"]
[ext_resource type="PackedScene" uid="uid://burv151ryj8af" path="res://scenes/entities/characters/player/player.tscn" id="2_o0ihb"]
[ext_resource type="Resource" uid="uid://dir4rvtkb8uei" path="res://resources/items/ingredients/water.tres" id="3_6q06x"]
[ext_resource type="PackedScene" uid="uid://bf1qppornvxyf" path="res://scenes/UI/inventory/inventory.tscn" id="3_dxjet"]
[ext_resource type="AudioStream" uid="uid://ca13ewt78meuu" path="res://art/cauldron.mp3" id="4_7nlll"]
[ext_resource type="Resource" uid="uid://ch5wlo5npgnqb" path="res://resources/items/ingredients/mysterious_liquid.tres" id="4_ou6is"]
[ext_resource type="PackedScene" uid="uid://blmjpbbqnu2ra" path="res://scenes/entities/objects/ingredient_shelf.tscn" id="5_6q06x"]
[ext_resource type="Resource" uid="uid://dqv00f01xb3wy" path="res://resources/items/ingredients/spruce_needle.tres" id="5_necax"]
[ext_resource type="Resource" uid="uid://cocyu7i1qou6" path="res://resources/items/ingredients/hollyhock.tres" id="6_hujxm"]
[ext_resource type="Resource" uid="uid://opo7xrv8ovos" path="res://resources/items/ingredients/birch_leaf.tres" id="6_r4lks"]
[ext_resource type="Resource" uid="uid://dipwt20hg4jm5" path="res://resources/items/ingredients/maple_seed.tres" id="8_pg34l"]
[ext_resource type="Resource" uid="uid://bcdylw0ingc47" path="res://resources/items/ingredients/lavender.tres" id="8_yyfjg"]
[ext_resource type="Resource" uid="uid://0p1c04e2kk82" path="res://resources/items/ingredients/twilight_glow_dust.tres" id="9_m4h2d"]
[ext_resource type="Resource" uid="uid://chf0lrmjp4q24" path="res://resources/items/ingredients/dawn_light_dust.tres" id="10_p8abn"]
[ext_resource type="Resource" uid="uid://dgomk177f7lwq" path="res://resources/items/ingredients/shard_of_time.tres" id="11_s17dp"]
[ext_resource type="Resource" uid="uid://chso8ijod8yoh" path="res://resources/items/ingredients/shard_of_love.tres" id="12_37hlw"]
[ext_resource type="Resource" uid="uid://d03n6p3t75sim" path="res://resources/items/ingredients/shard_of_intent.tres" id="13_6llfj"]
[ext_resource type="Resource" uid="uid://ohpw0e7jts55" path="res://resources/items/ingredients/shard_of_nothing.tres" id="14_0bhws"]
[ext_resource type="Resource" uid="uid://d38v75kp6eqn2" path="res://resources/items/ingredients/shard_of_space.tres" id="15_62atk"]
[ext_resource type="PackedScene" uid="uid://u8dknx7yj2p2" path="res://scenes/entities/objects/cauldron.tscn" id="17_necax"]
[ext_resource type="PackedScene" uid="uid://c2xenh7dy44e0" path="res://scenes/entities/objects/open_sign.tscn" id="18_pg34l"]
[ext_resource type="PackedScene" uid="uid://lhiyyt452wqb" path="res://scenes/entities/objects/bed.tscn" id="20_37hlw"]
[ext_resource type="Script" uid="uid://fqjy4w760p41" path="res://scripts/entities/characters/NPCs/customer_path.gd" id="20_r4lks"]
[ext_resource type="PackedScene" uid="uid://cgmqg8hxcsmmt" path="res://scenes/day_progress/day_progress_manager.tscn" id="22_m4h2d"]
[ext_resource type="PackedScene" uid="uid://cxavsjams7k3x" path="res://scenes/UI/cauldron_menu/cauldronmenu.tscn" id="23_6llfj"]
[ext_resource type="Script" uid="uid://dgxsmw8stpyd1" path="res://scripts/UI/money_label/player_money_label.gd" id="24_0bhws"]
[ext_resource type="PackedScene" uid="uid://c61x4ibg3v35p" path="res://scenes/Trash_can/Trash_Can.tscn" id="24_s17dp"]
[ext_resource type="AudioStream" uid="uid://bmnq3h1sx1s0r" path="res://art/money.mp3" id="25_i7in8"]
[ext_resource type="Texture2D" uid="uid://dpw3nu2ryxgon" path="res://art/recipes.png" id="26_rofvo"]
[ext_resource type="AudioStream" uid="uid://dwcbh1jgg5xky" path="res://art/new_day.mp3" id="27_0bhws"]
[ext_resource type="Script" uid="uid://crmukt5rnt4wr" path="res://scripts/UI/recipe_list/recipe_list.gd" id="27_tbnf8"]
[ext_resource type="AudioStream" uid="uid://ds4x08nmynnel" path="res://art/trash.mp3" id="29_ii537"]
[ext_resource type="Script" uid="uid://b4gupn0bx7jl" path="res://scripts/audio/money_sound.gd" id="30_gkmcc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_l3cfh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pg34l"]
size = Vector2(610, 220)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkmcc"]
size = Vector2(305, 57.5002)

[sub_resource type="LabelSettings" id="LabelSettings_tbnf8"]
font_size = 20
font_color = Color(0.419813, 0.419813, 0.419813, 1)

[sub_resource type="Curve2D" id="Curve2D_m4h2d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 542, 688, 0, 0, 0, 0, 542, 218, 0, 0, 0, 0, 542, 618)
}
point_count = 3

[node name="Main" type="Node"]
script = ExtResource("1_p8abn")

[node name="game_level" parent="." instance=ExtResource("1_ae60x")]
scale = Vector2(0.4, 0.4)

[node name="Cauldron" parent="game_level" instance=ExtResource("17_necax")]
z_index = 1
position = Vector2(4382.5, 1810)

[node name="cauldronSound" type="AudioStreamPlayer2D" parent="game_level/Cauldron"]
stream = ExtResource("4_7nlll")
pitch_scale = 0.7
autoplay = true
max_distance = 730.0
attenuation = 1.8025
bus = &"Sound Effects"

[node name="WaterShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(2602.5, 817.5)
item = ExtResource("3_6q06x")
price = 1
texture = SubResource("PlaceholderTexture2D_l3cfh")

[node name="MysteriousLiquidShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(3205, 825)
item = ExtResource("4_ou6is")
price = 5

[node name="SpruceShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(5592.5, -1575)
item = ExtResource("5_necax")
price = 2

[node name="BirchShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(5002.5, -1577.5)
item = ExtResource("6_r4lks")
price = 2

[node name="LavenderShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(4407.5, -967.5)
item = ExtResource("8_yyfjg")
price = 3

[node name="MapleShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(3815, -980)
item = ExtResource("8_pg34l")
price = 2

[node name="TwilightShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(-2192.5, -977.5)
item = ExtResource("9_m4h2d")
price = 20

[node name="DawnShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(-1587.5, -972.5)
item = ExtResource("10_p8abn")
price = 20

[node name="TimeShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(2305, -977.5)
item = ExtResource("11_s17dp")
price = 10

[node name="LoveShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(1102.5, -972.5)
item = ExtResource("12_37hlw")
price = 12

[node name="IntentShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(-997.5, -975)
item = ExtResource("13_6llfj")
price = 13

[node name="NothingShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(502.5, -967.5)
item = ExtResource("14_0bhws")
price = 15

[node name="SpaceShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(1707.5, -967.5)
item = ExtResource("15_62atk")
price = 10

[node name="HollyhockShelf" parent="game_level" instance=ExtResource("5_6q06x")]
position = Vector2(3197.5, -970)
item = ExtResource("6_hujxm")
price = 3

[node name="CounterArea2D" type="Area2D" parent="game_level"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_level/CounterArea2D"]
position = Vector2(1100, 1352.5)
shape = SubResource("RectangleShape2D_pg34l")

[node name="OpenSign" parent="game_level" instance=ExtResource("18_pg34l")]
position = Vector2(1960, 2250)
scale = Vector2(0.9, 0.9)

[node name="Bed" parent="game_level" instance=ExtResource("20_37hlw")]
position = Vector2(-850, 1247.5)
scale = Vector2(2.5, 2.5)

[node name="Door" type="StaticBody2D" parent="game_level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_level/Door"]
position = Vector2(952.5, 2113.75)
shape = SubResource("RectangleShape2D_gkmcc")

[node name="player" parent="." instance=ExtResource("2_o0ihb")]
z_index = 1
position = Vector2(-150, 531)
scale = Vector2(0.8, 0.8)
speed = 475
metadata/_edit_group_ = true

[node name="PlayerCamera" type="Camera2D" parent="player"]
position = Vector2(1.25, 0)
zoom = Vector2(0.8, 0.8)

[node name="UserInterfaceLayer" type="CanvasLayer" parent="."]

[node name="Inventory" parent="UserInterfaceLayer" instance=ExtResource("3_dxjet")]
offset_left = 112.0
offset_top = 71.0
offset_right = 112.0
offset_bottom = 71.0
scale = Vector2(1.5, 1.5)

[node name="DayProgressDisplay" type="Label" parent="UserInterfaceLayer"]
offset_right = 399.0
offset_bottom = 134.0

[node name="CauldronMenu" parent="UserInterfaceLayer" instance=ExtResource("23_6llfj")]

[node name="PlayerMoneyLabel" type="RichTextLabel" parent="UserInterfaceLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_bottom = 177.0
grow_horizontal = 0
theme_override_colors/default_color = Color(0.921077, 0.785836, 0.111469, 1)
theme_override_font_sizes/normal_font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("24_0bhws")

[node name="RecipeList" type="TextureRect" parent="UserInterfaceLayer"]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 114.0
offset_top = -142.0
offset_right = 1014.0
offset_bottom = 758.0
grow_vertical = 2
scale = Vector2(0.45297, 0.446349)
size_flags_horizontal = 0
texture = ExtResource("26_rofvo")
script = ExtResource("27_tbnf8")

[node name="Label" type="Label" parent="UserInterfaceLayer"]
offset_left = 114.0
offset_top = 206.0
offset_right = 382.0
offset_bottom = 244.0
text = "Press [Tab] to Open Recipes"
label_settings = SubResource("LabelSettings_tbnf8")

[node name="CustomerPath" type="Path2D" parent="."]
y_sort_enabled = true
position = Vector2(-161, 410)
curve = SubResource("Curve2D_m4h2d")
script = ExtResource("20_r4lks")
metadata/_edit_group_ = true

[node name="CustomerSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DayProgressManager" parent="." instance=ExtResource("22_m4h2d")]

[node name="TrashCan" parent="." instance=ExtResource("24_s17dp")]
position = Vector2(1117, 781)

[node name="trashSound" type="AudioStreamPlayer2D" parent="TrashCan"]
stream = ExtResource("29_ii537")
bus = &"Sound Effects"

[node name="newDaySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_0bhws")
bus = &"Sound Effects"

[node name="moneySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_i7in8")
bus = &"Sound Effects"
script = ExtResource("30_gkmcc")

[connection signal="shop_opened_status_changed" from="game_level/OpenSign" to="CustomerPath" method="_on_open_sign_shop_opened_status_changed"]
[connection signal="timeout" from="CustomerSpawnTimer" to="CustomerPath" method="_on_customer_spawn_timer_timeout"]
